--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-LOG/
-LOCK/
-SESSION/
-DATA/
-DATA/NUMBERS/
-TMP/
-SAMPLE/
+LOG/*
+LOCK/*
+SESSION/*
+DATA/*
+!DATA/ORG_LV1-3
+DATA/NUMBERS/*
+TMP/*
+SAMPLE/*
 
