--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-LOG/*
-LOCK/*
-SESSION/*
+/LOG/*
+/LOCK/*
+/SESSION/*
+/DATA/*
 !DATA/ORG_LV1-3
 !DATA/STUFF
-DATA/*
 DATA/NUMBERS/*
-TMP/*
-SAMPLE/*
+/TMP/*
+/SAMPLE/*
 
