--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-#LOG/*
-#LOCK/*
-#SESSION/*
-#DATA/*
+LOG/*
+LOCK/*
+SESSION/*
+DATA/*
 !DATA/ORG_LV1-3
 !DATA/STUFF
-/DATA/NUMBERS/*
-#TMP/*
-#/SAMPLE/*
+!DATA/NUMBERS/*
+TMP/*
+/SAMPLE/*
 
