--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ LOG/*
 LOCK/*
 SESSION/*
 /DATA/*
-#!DATA/ORG_LV1-3
-#!DATA/STUFF
-#!DATA/NUMBERS/*
+!DATA/ORG_LV1-3/*
+!DATA/STUFF/*
+!DATA/NUMBERS/test
 TMP/*
 /SAMPLE/*
 
