--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-LOG/*
-LOCK/*
-SESSION/*
-/DATA/*
-!DATA/ORG_LV1-3/*
-!DATA/STUFF/*
-!DATA/NUMBERS/test
-TMP/*
-/SAMPLE/*
+#LOG/*
+#LOCK/*
+#SESSION/*
+#/DATA/*
+#!DATA/ORG_LV1-3/*
+#!DATA/STUFF/*
+#!DATA/NUMBERS/test
+#TMP/*
+#/SAMPLE/*
 
